<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crazyflie Client</string>
    <string name="title_activity_main">Crazyflie Client</string>

    <!-- Header -->
    <string name="battery_text">%1$3d%%</string>
    <string name="batteryIconContentDescription">Battery icon</string>
    <string name="linkQuality_text">%1$3s</string>
    <string name="linkQualityIconContentDescription">Link quality icon</string>

    <!-- Menu -->
    <string name="menu_connect">Connect</string>
    <string name="menu_connect_ContentDescription">Connect/Disconnect button</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_preferences_ContentDescription">Preferences button</string>
    <string name="preferences_title">Crazyflie Client settings</string>

    <string name="button_ledring_contentDescription">LED ring button</string>
    <string name="button_headlight_contentDescription">Headlight button</string>
    <string name="button_buzzer_contentDescription">Buzzer button</string>
    <string name="button_cameraView_contentDescription">Camera view button</string>
    <string name="button_autonomousFlight_contentDescription">Autonomous Flight button</string>

    <!-- Connection settings -->
    <string name="preferences_radio_title">Connection settings</string>
    <string name="preferences_category_radio">Crazyradio settings</string>
    <string name="preferences_radio_channel">Radio channel</string>
    <string name="preferences_radio_channel_summary">Set the radio channel</string>
    <string name="preferences_radio_channel_defaultValue">10</string>
    <string name="preferences_radio_datarate">Radio datarate</string>
    <string name="preferences_radio_datarate_summary">Set the radio datarate</string>
    <string name="preferences_radio_datarate_defaultValue">0</string>
    <string name="preferences_radio_scan">Radio Scan</string>
    <string name="preferences_radio_scan_summary">Initiate radio scan to find Crazyflie</string>
    <string name="select_connection_dialog_title">Select Connection</string>
    <string name="preferences_radio_stats">Radio stats</string>
    <string name="preferences_radio_stats_summary">Not attached</string>
    <string name="preferences_category_bluetooth">Bluetooth Settings</string>
    <string name="preferences_ble_latency_fix">Bluetooth latency workaround</string>
    <string name="preferences_ble_latency_fix_summary">Check if you experience big latency (seconds of latency).</string>

    <!-- Flight control settings -->
    <string name="preferences_flightcontrol_title">Flight control settings</string>
    <string name="preferences_mode">Mode</string>
    <string name="preferences_mode_defaultValue">2</string>
    <string name="preferences_deadzone">Deadzone</string>
    <string name="preferences_deadzone_defaultValue">0.1</string>
    <string name="preferences_rolltrim">Roll trim</string>
    <string name="preferences_pitchtrim">Pitch trim</string>
    <string name="preferences_trim_defaultValue">0.0</string>
    <string name="preferences_advancedflightcontrol">Advanced flight control</string>
    <string name="preferences_afc_title">Advanced flight control preferences</string>
    <string name="preferences_maxRollPitchAngle_title">Max roll/pitch angle</string>
    <string name="preferences_maxRollPitchAngle_defaultValue">20</string>
    <string name="preferences_maxYawAngle_title">Max yaw angle</string>
    <string name="preferences_maxYawAngle_defaultValue">150</string>
    <string name="preferences_maxThrust_title">Max thrust (%)</string>
    <string name="preferences_maxThrust_defaultValue">80</string>
    <string name="preferences_minThrust_title">Min thrust (%)</string>
    <string name="preferences_minThrust_defaultValue">25</string>
    <string name="preferences_reset_afc_title">Reset values</string>
    <string name="preferences_reset_afc_summary">Reset to default values</string>
    <string name="preferences_afc_bool_summary_on">Crazy mode. Use at your own risk!</string>
    <string name="preferences_afc_bool_summary_off">Normal mode</string>
    <string name="preferences_xmode_title">X-Mode</string>
    <string name="preferences_xmode_summary">Client X-mode</string>

    <!-- Controller settings -->
    <string name="preferences_controller_title">Controller settings</string>
    <string name="preferences_controller_defaultValue">0</string>
    <string name="preferences_controller">Controller</string>
    <string name="preferences_controller_summary">Choose input controller</string>
    <string name="preferences_use_gyro_bool_summary_on">Use gyroscope sensors for roll and pitch</string>
    <string name="preferences_use_gyro_bool_summary_off">Do not use gyroscope sensors for roll and pitch</string>
    <string name="preferences_use_gyro_bool_title">Use gyroscope sensors</string>
    <string name="preferences_gyro_amp_title">Gyroscope amplification</string>
    <string name="preferences_gyro_amp_summary">Choose gyroscope amplification</string>
    <string name="preferences_gyro_amp_defaultValue">2</string>
    <string name="preferences_touch_thrust_full_travel">Use full travel for thrust</string>
    <string name="preferences_touch_thrust_full_travel_summary_on">On the touch controller, use the full travel from bottom to top to control thrust</string>
    <string name="preferences_touch_thrust_full_travel_summary_off">On the touch controller, use the travel from center to top to control thrust</string>
    <string name="preferences_joystick_size_title">Virtual joystick size (%)</string>
    <string name="preferences_joystick_size_defaultValue">80</string>
    <string name="preferences_btn_title">Gamepad axis and button mapping</string>
    <string name="preferences_category_axes">Axes</string>
    <string name="preferences_right_analog_x_axis_title">Right analog X axis</string>
    <string name="preferences_right_analog_x_axis_defaultValue">AXIS_Z</string>
    <string name="preferences_right_analog_y_axis_title">Right analog Y axis</string>
    <string name="preferences_right_analog_y_axis_defaultValue">AXIS_RZ</string>
    <string name="preferences_left_analog_x_axis_title">Left analog X axis</string>
    <string name="preferences_left_analog_x_axis_defaultValue">AXIS_X</string>
    <string name="preferences_left_analog_y_axis_title">Left analog Y axis</string>
    <string name="preferences_left_analog_y_axis_defaultValue">AXIS_Y</string>
    <string name="preferences_splitaxis_yaw_bool_summary">Use split axis control for yaw</string>
    <string name="preferences_splitaxis_yaw_bool_title">Yaw split axis</string>
    <string name="preferences_splitaxis_yaw_left_axis_title">Yaw split axis - left axis</string>
    <string name="preferences_splitaxis_yaw_left_axis_defaultValue">AXIS_BRAKE</string>
    <string name="preferences_splitaxis_yaw_right_axis_title">Yaw split axis - right axis</string>
    <string name="preferences_splitaxis_yaw_right_axis_defaultValue">AXIS_GAS</string>
    <string name="preferences_axis_mapping_dialog_text">Please move a joystick axis&#8230;</string>
    <string name="preferences_category_buttons">Buttons</string>
    <string name="preferences_emergency_btn_title">Emergency stop</string>
    <string name="preferences_emergency_btn_defaultValue">KEYCODE_BUTTON_B</string>
    <string name="preferences_rolltrim_plus_btn_title">Roll trim +</string>
    <string name="preferences_rolltrim_plus_btn_defaultValue">KEYCODE_DPAD_RIGHT</string>
    <string name="preferences_rolltrim_minus_btn_title">Roll trim -</string>
    <string name="preferences_rolltrim_minus_btn_defaultValue">KEYCODE_DPAD_LEFT</string>
    <string name="preferences_pitchtrim_plus_btn_title">Pitch trim +</string>
    <string name="preferences_pitchtrim_plus_btn_defaultValue">KEYCODE_DPAD_UP</string>
    <string name="preferences_pitchtrim_minus_btn_title">Pitch trim -</string>
    <string name="preferences_pitchtrim_minus_btn_defaultValue">KEYCODE_DPAD_DOWN</string>
    <string name="preferences_alt1_btn_title">Alt 1</string>
    <string name="preferences_alt1_btn_defaultValue">KEYCODE_BUTTON_L1</string>
    <string name="preferences_alt2_btn_title">Alt 2</string>
    <string name="preferences_alt2_btn_defaultValue">KEYCODE_BUTTON_L2</string>
    <string name="preferences_hover_btn_title">Hover</string>
    <string name="preferences_hover_btn_defaultValue">KEYCODE_BUTTON_R1</string>
    <string name="preferences_reset_btn_title">Reset values</string>
    <string name="preferences_reset_btn_summary">Reset to default values</string>
    <string name="preferences_button_mapping_dialog_text">Please press a button&#8230;</string>
    <string name="preferences_category_actions">Actions</string>
    <string name="preferences_alt1_action_defaultValue">ring.headlightEnable</string>
    <string name="preferences_alt1_action">Alt 1 action</string>
    <string name="preferences_alt1_action_title">Alt 1 action</string>
    <string name="preferences_alt1_action_summary">Alt 1 action summary</string>
    <string name="preferences_alt2_action_defaultValue">ring.effect</string>
    <string name="preferences_alt2_action">Alt 2 action</string>
    <string name="preferences_alt2_action_title">Alt 2 action</string>
    <string name="preferences_alt2_action_summary">Alt 2 action summary</string>

    <!-- App settings -->
    <string name="preferences_app_title">App settings</string>
    <string name="preferences_screen_rotation_lock_title">Screen rotation lock</string>
    <string name="preferences_screen_rotation_lock_summary"></string>
    <string name="preferences_immersive_mode_title">Full screen mode</string>
    <string name="preferences_immersive_mode_summary">Requires Android 4.4</string>
    <string name="preferences_show_console_title">Show console</string>
    <string name="preferences_show_console_summary">Display console messages from Crazyflie</string>

    <string name="preferences_bootloader_title">Bootloader</string>
    
    <!-- FlightDataView -->
    <string name="pitch_label">P:</string>
    <string name="pitch">%3.0f</string>
    <string name="roll_label">R:</string>
    <string name="roll">%3.0f</string>
    <string name="thrust_label">T:</string>
    <string name="thrust">%3.0f%%</string>
    <string name="yaw_label">Y:</string>
    <string name="yaw">%3.0f</string>

    <!-- Bootloader screen -->
    <string name="title_activity_bootloader">BootloaderActivity</string>
    <string name="bootloader_title">Select firmware version:</string>
    <string name="bootloader_releaseNotes">Show release notes</string>
    <string name="bootloader_flashFirmware">Flash firmware</string>
    <string name="bootloader_statusLine">Status:</string>

</resources>
