<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true">

    <!-- HEADER start -->
    <ImageView
        android:id="@+id/battery_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/batteryIconContentDescription"
        android:labelFor="@+id/battery_text"
        android:src="@drawable/ic_battery_std_black_18dp" />

    <TextView
        android:id="@+id/battery_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/battery_icon"
        android:layout_toEndOf="@+id/battery_icon"
        android:layout_toRightOf="@+id/battery_icon"
        android:gravity="end"
        android:text="@string/battery_text"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/linkQuality_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/battery_icon"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_toEndOf="@+id/battery_text"
        android:layout_toRightOf="@+id/battery_text"
        android:contentDescription="@string/linkQualityIconContentDescription"
        android:labelFor="@+id/linkQuality_text"
        android:src="@drawable/ic_wifi_tethering_black_18dp" />

    <TextView
        android:id="@+id/linkQuality_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linkQuality_icon"
        android:layout_toEndOf="@+id/linkQuality_icon"
        android:layout_toRightOf="@+id/linkQuality_icon"
        android:gravity="end"
        android:text="@string/linkQuality_text"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <ImageButton
        android:id="@+id/imageButton_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/imageButton_settings"
        android:layout_toLeftOf="@+id/imageButton_settings"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/menu_connect_ContentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_action_import_export" />

    <ImageButton
        android:id="@+id/imageButton_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/menu_preferences_ContentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_action_settings_light" />

    <!-- HEADER end -->

    <ImageButton
        android:id="@+id/button_ledRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_headLight"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_toStartOf="@id/button_headLight"
        android:layout_toLeftOf="@id/button_headLight"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_ledring_contentDescription"
        android:elevation="2dp"
        android:onClick="switchLedRingEffect"
        android:src="@drawable/ic_led_ring" />

    <ImageButton
        android:id="@+id/button_headLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_buzzerSound"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_toStartOf="@id/button_buzzerSound"
        android:layout_toLeftOf="@id/button_buzzerSound"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_headlight_contentDescription"
        android:elevation="2dp"
        android:onClick="toggleHeadlight"
        android:src="@drawable/ic_headlight" />

    <ImageButton
        android:id="@+id/button_buzzerSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_buzzer_contentDescription"
        android:elevation="2dp"
        android:onClick="playBuzzerSound"
        android:src="@drawable/ic_volume_up_black" />

    <ImageButton
        android:id="@+id/button_cameraView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_buzzerSound"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_toEndOf="@id/button_buzzerSound"
        android:layout_toRightOf="@id/button_buzzerSound"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_cameraView_contentDescription"
        android:elevation="2dp"
        android:longClickable="false"
        android:src="@drawable/ic_camera_view" />

    <ImageButton
        android:id="@+id/button_autonomousFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_cameraView"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_toEndOf="@id/button_cameraView"
        android:layout_toRightOf="@id/button_cameraView"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_autonomousFlight_contentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_autonomous_flight" />

    <se.bitcraze.crazyfliecontrol2.FlightDataView
        android:id="@+id/flightdataview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_buzzerSound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:id="@+id/console_scrollView"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_below="@+id/flightdataview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/stroke_bg"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/console_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:padding="2dp"
            android:textSize="10dp" />
    </ScrollView>

    <ImageView
        android:id="@+id/camera_imageView"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_below="@+id/flightdataview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <com.MobileAnarchy.Android.Widgets.Joystick.JoystickView
        android:id="@+id/joystick_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/flightdataview"
        android:layout_toStartOf="@+id/console_scrollView"
        android:layout_toLeftOf="@+id/console_scrollView"
        android:gravity="bottom" />

    <com.MobileAnarchy.Android.Widgets.Joystick.JoystickView
        android:id="@+id/joystick_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/flightdataview"
        android:layout_toEndOf="@+id/console_scrollView"
        android:layout_toRightOf="@+id/console_scrollView"
        android:gravity="bottom" />

</RelativeLayout>